0. Project/vms/manifest/keycloak/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:22.0.1
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-theme-pv
              mountPath: /opt/keycloak/themes
            - name: keycloak-provider-pv
              mountPath: /opt/keycloak/providers

      volumes:
        - name: keycloak-theme-pv
          persistentVolumeClaim:
            claimName: keycloak-theme-pvc
        - name: keycloak-provider-pv
          persistentVolumeClaim:
            claimName: keycloak-provider-pvc

# =========================
# Keycloak Service
# =========================
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

# =========================
# Keycloak Ingress (Kong) HTTP + /idp
# =========================
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    konghq.com/protocols: "http"
    konghq.com/strip-path: "true"  # remove /idp before forwarding
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /idp
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
